Fix for layout in code review on small screens

--- a/src/uLearn.Web/Content/antiplagiarism.css
+++ b/src/uLearn.Web/Content/antiplagiarism.css
@@ -1,6 +1,6 @@
 /* Antiplagiarism status */
 
-.antiplagiarism-status {
+.legacy-page .antiplagiarism-status {
     background-color: #f7f7f7;
     padding: 11px 18px;
     color: #333;
@@ -8,24 +8,24 @@
     margin: 0;
 }
 
-.antiplagiarism-status.fixed {
+.legacy-page .antiplagiarism-status.fixed {
     position: fixed;
     top: 50px;
     z-index: 5;
 }
 
 @media (min-width: 768px) {
-    .antiplagiarism-status.fixed {
+	.legacy-page .antiplagiarism-status.fixed {
         width: 750px;
     }
 }
 @media (min-width: 992px) {
-    .antiplagiarism-status.fixed {
+	.legacy-page .antiplagiarism-status.fixed {
         width: 970px;
     }
 }
 @media (min-width: 1200px) {
-    .antiplagiarism-status.fixed {
+	.legacy-page .antiplagiarism-status.fixed {
         width: 1170px;
     }
 }
